# SIMD-TUTORIAL

./: .gitignore  LICENSE  README.md
arm/: CMakeLists.txt  README.md  build.sh  run.sh  setup_env.sh
arm/neon/: CMakeLists.txt  MEMORY_OPERATIONS.md  MEMORY_OPERATIONS.zh.md  load_instructions_u8.cpp  memory_load_store.cpp  neon_example.cpp  store_instructions_u8.cpp
arm/sve/: CMakeLists.txt  MEMORY_OPERATIONS.md  MEMORY_OPERATIONS.zh.md  load_instructions_s32.cpp  memory_load_store.cpp  store_instructions_u32.cpp  sve_example.cpp
arm/sve2/: CMakeLists.txt  MEMORY_OPERATIONS.md  MEMORY_OPERATIONS.zh.md  load_nt_gather_instructions.cpp  memory_load_store.cpp  store_nt_scatter_instructions.cpp  sve2_example.cpp
x86/: CMakeLists.txt  README.md  build.sh  run.sh
x86/avx/: CMakeLists.txt  MEMORY_OPERATIONS.md  MEMORY_OPERATIONS_CN.md  load_store.cpp  memory_operations.cpp
x86/avx2/: CMakeLists.txt  MEMORY_OPERATIONS.md  MEMORY_OPERATIONS_CN.md  memory_operations.cpp
x86/avx512/: CMakeLists.txt  MEMORY_OPERATIONS.md  MEMORY_OPERATIONS_CN.md  load_store.cpp  memory_operations.cpp
x86/common/: simd_utils.h
x86/sse/: CMakeLists.txt  MEMORY_OPERATIONS.md  MEMORY_OPERATIONS_CN.md  load_instructions.cpp  load_store.cpp  store_instructions.cpp
