
add_executable(sve2_load_nt_gather_instructions load_nt_gather_instructions.cpp)
target_compile_options(sve2_load_nt_gather_instructions PRIVATE -march=armv8-a+sve2)

add_executable(sve2_store_nt_scatter_instructions store_nt_scatter_instructions.cpp)
target_compile_options(sve2_store_nt_scatter_instructions PRIVATE -march=armv8-a+sve2)
